--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,11 +16,6 @@
       href="%PUBLIC_URL%/favicon-16x16.png"
     />
     <link
-      rel="mask-icon"
-      href="%PUBLIC_URL%/safari-pinned-tab.svg"
-      color="#97aee2"
-    />
-    <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="%PUBLIC_URL%/apple-touch-icon.png"
@@ -33,25 +28,25 @@
       rel="stylesheet"
     />
 
-    <meta name="apple-mobile-web-app-title" content="TosiDrop" />
-    <meta name="application-name" content="TosiDrop" />
-    <meta name="msapplication-TileColor" content="#c7d5f4" />
-    <meta name="theme-color" content="#c7d5f4" />
+    <meta name="apple-mobile-web-app-title" content="The Silk Toad Claims" />
+    <meta name="application-name" content="The Silk Toad Claims" />
+    <meta name="msapplication-TileColor" content="#121212" />
+    <meta name="theme-color" content="#121212" />
     <meta
       name="description"
-      content="TosiDrop is an all-encompassing token distribution platform on the Cardano and Ergo blockchains."
+      content="Cardano native token claims portal for The Silk Toad"
     />
     <meta
       property="og:image"
-      content="%PUBLIC_URL%/tosidrop-logo-512x512.png"
+      content="%PUBLIC_URL%/logo-512x512.png"
     />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tosidrop.io/" />
-    <meta property="og:title" content="TosiDrop" />
-    <meta property="og:description" content="Airdrops on Cardano and Ergo" />
+    <meta property="og:url" content="https://claim.silktoad.io/" />
+    <meta property="og:title" content="The Silk Toad Claims" />
+    <meta property="og:description" content="Cardano native token claims portal for The Silk Toad" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -66,7 +61,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>TosiDrop - Airdrops on Cardano and Ergo</title>
+    <title>The Silk Toad Claims</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
