feat: brand discoin
Signed-off-by: Chris Gianelloni <wolf31o2@blinklabs.io>

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,13 +28,13 @@
       rel="stylesheet"
     />
 
-    <meta name="apple-mobile-web-app-title" content="The Silk Toad Claims" />
-    <meta name="application-name" content="The Silk Toad Claims" />
+    <meta name="apple-mobile-web-app-title" content="discoin claims" />
+    <meta name="application-name" content="discoin claims" />
     <meta name="msapplication-TileColor" content="#121212" />
     <meta name="theme-color" content="#121212" />
     <meta
       name="description"
-      content="Cardano native token claims portal for The Silk Toad"
+      content="Claims portal for discoin"
     />
     <meta
       property="og:image"
@@ -44,9 +44,9 @@
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://claim.silktoad.io/" />
-    <meta property="og:title" content="The Silk Toad Claims" />
-    <meta property="og:description" content="Cardano native token claims portal for The Silk Toad" />
+    <meta property="og:url" content="https://discoin.blinklabs.io/" />
+    <meta property="og:title" content="discoin claims" />
+    <meta property="og:description" content="Claims portal for discoin" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -61,7 +61,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>The Silk Toad Claims</title>
+    <title>discoin claims</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
